# personal-health

./: .Rprofile  .gitignore  .python-version  README.md  _targets.R  _targets_packages.R  cronometer-download.py  cronometer-download.sh  goldencheetah.R  mfp-download.py  personal-health.Rmd  pyproject.toml  run.sh
_targets/meta/: meta
data/: Measurement-Summary-2015-04-08-to-2021-05-17.csv
data/Cronometer/: biometrics.csv  cron_biometrics.csv  cron_daily-nutrition.csv  cron_exercises.csv  dailySummary.csv  exercises.csv
data/MFP/: Exercise-Summary-2015-04-08-to-2021-05-17.csv  Nutrition-Summary-2015-04-08-to-2021-05-17.csv  mfp_food-summary.parquet
funs/: cleaning.R
renv/: activate.R
