[tool.poetry]
name = "personal-health"
version = "0.1.0"
description = ""
authors = ["Callum Arnold <24391445+arnold-c@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
myfitnesspal = "^1.17.0"
ipykernel = "^6.15.1"
jupyter = "^1.0.0"
pandas = "^1.4.3"
arrow = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
